--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "trailingComma": "all",
   "endOfLine": "lf",
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2
